Feat: add header and top main

--- a/index.html
+++ b/index.html
@@ -17,19 +17,56 @@
 <body>
     <div class="big-container">
 
-        <header class="bg-black">
-            <div class="container">
-                <img src="" alt="">                
+        <header class="bg-black text-grey">
+
+            <div class="header-top flow-20">
+                <div class="logo">
+                    <img src="./img/logo.svg" alt="logo">
+                </div>
+
+                <nav class="first-nav">
+                    <ul class="nav-list">
+                        <li><img src="/img/home.svg" alt="home"></i>Home</li>
+                        <li><img src="./img/search.svg" alt="search">Cerca</li>
+                        <li><img src="./img/libreria.svg" alt="library">La tua libreria</li>
+                    </ul>
+                </nav>
+
+                <nav class="second-nav flow-10">
+                    <h4 class="text-white">PLAYLIST</h4>
+                    <div>
+                        <button class="btn-square"><i class="fa-solid fa-plus"></i></button><span>Crea Playlist</span>
+                    </div>
+                    <ul class="nav-list">
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                    </ul>
+                </nav>                                
             </div>
+
+            <div class="header-bottom">
+                <div class="unistall">
+                    <img src="./img/download.svg" alt=""><small>Installa App</small>
+                </div>
+
+                <div class="profile">
+                    <img src="./img/profile.svg" alt="profile"><span class="text-white">John Doe</span>                
+                </div>
+            </div>
+
         </header>
 
         <main>  
             <div class="top-main height-90 bg-lightblack text-white">
-                
+                <button class="btn-primary">EFFETTUA L'UPGRADE</button>              
             </div>
 
-            <div class="bottom-main bg-darkblue text-white">
-                
+            <div class="bottom-main bg-darkblue text-white">                
             </div>      
         </main>
 
