Feat: add fix html

--- a/index.html
+++ b/index.html
@@ -122,31 +122,31 @@
 
                         <div class="card flow-10">
                             <img src="./img/stranger.jpeg" alt="stranger">
-                            <figcaption>Heavy Metal</figcaption>
-                            <figcaption class="text-grey"><small>Subtitle</small></figcaption>                        
+                            <figcaption>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</figcaption>
+                            <figcaption class="text-grey"><small>Kyle Dixon & Michael Stein</small></figcaption>                        
                         </div>
 
                         <div class="card flow-10">
                             <img src="./img/aquietplace.jpeg" alt="aquietplace">
-                            <figcaption>Heavy Metal</figcaption>
+                            <figcaption>A Quiet Place</figcaption>
                             <figcaption class="text-grey"><small>Subtitle</small></figcaption>                        
                         </div>
 
                         <div class="card flow-10">
                             <img src="./img/split.jpeg" alt="split">
-                            <figcaption>Heavy Metal</figcaption>
+                            <figcaption>Split</figcaption>
                             <figcaption class="text-grey"><small>Subtitle</small></figcaption>                        
                         </div>
 
                         <div class="card flow-10">
                             <img src="./img/cure.jpeg" alt="cure">
-                            <figcaption>Heavy Metal</figcaption>
+                            <figcaption>A Cure for Wellness</figcaption>
                             <figcaption class="text-grey"><small>Subtitle</small></figcaption>                        
                         </div>
 
                         <div class="card flow-10">
                             <img src="./img/sinister.jpeg" alt="sinister">
-                            <figcaption>Heavy Metal</figcaption>
+                            <figcaption>Sinister</figcaption>
                             <figcaption class="text-grey"><small>Subtitle</small></figcaption>                        
                         </div>
 
