--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <!---------- LOGO ----------------->
             <div class="logo">
                     <img src="./img/logo.svg" alt="logo">
+                    <img src="./img/favicon.ico" alt="logo.mini">
             </div>
             <!---------- FIRST NAV ----------------->
             <nav class="first-nav">
