Feat: add comment footer

--- a/index.html
+++ b/index.html
@@ -203,8 +203,9 @@
         <!---------- /MAIN ----------------->  
 
     </div>
-    <!----------/THE HEADER AND MAIN'S CONTAINER----------------->   
-
+    <!----------/THE HEADER AND MAIN'S CONTAINER----------------->  
+    
+    <!---------- FOOTER -----------------> 
     <footer class="bg-gray height-90">
 
         <div class="box-song">
@@ -284,8 +285,8 @@
 
         </div>
 
-
     </footer>
+    <!---------- FOOTER ----------------->
     
 </body>
 </html>
