Feat: add hover album

--- a/index.html
+++ b/index.html
@@ -116,37 +116,67 @@
                     <div class="col">
 
                         <div class="card flow-10">
-                            <img src="./img/metal_lifting.jpg" alt="metal_lifting">
+                            <div class="album">
+                                <img src="./img/metal_lifting.jpg" alt="metal_lifting">
+                                <div class="album-cover-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
                             <figcaption>Heavy Metal</figcaption>
                             <figcaption class="text-grey"><small>Subtitle</small></figcaption>                        
                         </div>
 
                         <div class="card flow-10">
-                            <img src="./img/stranger.jpeg" alt="stranger">
+                            <div class="album">
+                                <img src="./img/stranger.jpeg" alt="stranger">
+                                <div class="album-cover-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
                             <figcaption>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</figcaption>
                             <figcaption class="text-grey"><small>Kyle Dixon & Michael Stein</small></figcaption>                        
                         </div>
 
                         <div class="card flow-10">
-                            <img src="./img/aquietplace.jpeg" alt="aquietplace">
+                            <div class="album">
+                                <img src="./img/aquietplace.jpeg" alt="aquietplace">
+                                <div class="album-cover-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
                             <figcaption>A Quiet Place</figcaption>
                             <figcaption class="text-grey"><small>Subtitle</small></figcaption>                        
                         </div>
 
                         <div class="card flow-10">
-                            <img src="./img/split.jpeg" alt="split">
+                            <div class="album">
+                                <img src="./img/split.jpeg" alt="split">
+                                <div class="album-cover-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
                             <figcaption>Split</figcaption>
                             <figcaption class="text-grey"><small>Subtitle</small></figcaption>                        
                         </div>
 
                         <div class="card flow-10">
-                            <img src="./img/cure.jpeg" alt="cure">
+                            <div class="album">
+                                <img src="./img/cure.jpeg" alt="cure">
+                                <div class="album-cover-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
                             <figcaption>A Cure for Wellness</figcaption>
                             <figcaption class="text-grey"><small>Subtitle</small></figcaption>                        
                         </div>
 
                         <div class="card flow-10">
-                            <img src="./img/sinister.jpeg" alt="sinister">
+                            <div class="album">
+                                <img src="./img/sinister.jpeg" alt="sinister">
+                                <div class="album-cover-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
                             <figcaption>Sinister</figcaption>
                             <figcaption class="text-grey"><small>Subtitle</small></figcaption>                        
                         </div>
@@ -162,12 +192,22 @@
                     <div class="col">
 
                         <div class="card flow-10">
-                            <img src="./img/radar.jpeg" alt="radar">
+                            <div class="album">
+                                <img src="./img/radar.jpeg" alt="radar">
+                                <div class="album-cover-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
                             <figcaption>Release Radar</figcaption>                       
                         </div>
 
                         <div class="card flow-10">
-                            <img src="./img/mixdaily.jpeg" alt="mixdaily">
+                            <div class="album">
+                                <img src="./img/mixdaily.jpeg" alt="mixdaily">
+                                <div class="album-cover-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
                             <figcaption>Daily Mix</figcaption>                       
                         </div>
                     
