--- a/index.html
+++ b/index.html
@@ -223,12 +223,22 @@
                     <div class="col">
 
                         <div class="card flow-10">
+                        <div class="album circle-album">
                             <img class="circle-img" src="./img/youg.jpeg" alt="youg">
+                            <div class="album-cover-hover">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </div>
+                        </div>
                             <figcaption>Lana Del Rey</figcaption>                       
                         </div>
 
                         <div class="card flow-10">
-                            <img class="circle-img" src="./img/einaudi.jpeg" alt="einaudi">
+                            <div class="album circle-album">
+                                <img class="circle-img" src="./img/einaudi.jpeg" alt="einaudi">
+                                <div class="album-cover-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
                             <figcaption>Ludovico Einaudi</figcaption>                       
                         </div>
                     
@@ -312,9 +322,9 @@
         <div class="box-volume">
 
             <div class="volume-button">
-                <button class="btn"><i class="fa-solid fa-list text-white"></i></button>
-                <button class="btn"><i class="fa-solid fa-display text-white"></i></button>
-                <button class="btn"><i class="fa-solid fa-volume-high text-white"></i></button>
+                <button class="btn text-grey"><i class="fa-solid fa-list"></i></button>
+                <button class="btn text-grey"><i class="fa-solid fa-display"></i></button>
+                <button class="btn text-grey"><i class="fa-solid fa-volume-high"></i></button>
             </div>
 
             <div class="volume-area">
